--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
 		"no-tabs": 0,
 		"class-methods-use-this": 0,
 		"no-param-reassign": 0,
+		"consistent-return": 0,
 		"indent": ["error", "tab"]
 	}
 }
